--- a/src/containers/Registry.css
+++ b/src/containers/Registry.css
@@ -1,20 +1,72 @@
 .container {
+    position: fixed;
     margin: 0;
+    overflow: scroll;
     height: 100vh;
     width: 100%;
-    background-color: #163241;
+    background: url('http://kelseyandpatrickwedding.com/images/kitchen_bw.png');
+    background-size: cover;
+    background-position: right left;
+  }
+  
+  .infoCard {
+    width: 33%;
+    min-width: 250px;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    margin-right: 20px;
+    vertical-align: top;
+  }
+  
+  .cardContent {
+    min-height: 280px;
+  }
+  
+  .row {
+    max-width: 900px;
+    margin: 0 auto;
+  }
+  
+  .header {
+    color: #6B061F;
+    font-size: 48px;
+    padding: 20px 20px 0 20px;
+    margin: 16px 0;
+  }
+  
+  .subheader {
+    color: #6B061F;
+    font-size: 36px;
+    padding: 20px 20px 0 20px;
+    margin-top: 20px;
+  }
+  
+  .info {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
+    padding-bottom: 16px;
   }
 
-  .banner {
-      color: #fff;
-      font-size: 36px;
-      text-align: center;
-      font-family: 'Poiret One', arial;
-      padding-top: 100px;
+  .link {
+    padding: 20px;
+    font-size: 20px;
   }
-
-  @media (min-width: 756px) {
-    .banner {
-        font-size: 60px;
+  
+  
+  .link a {
+    color: #6B061F;
+  }
+  
+  .info2 {
+    padding-left: 20px;
+    color: #6B061F;
+    font-size: 20px;
+  }
+  
+  @media (max-width: 570px) {
+    .infoCard {
+      width: 100%;
     }
   }
