--- a/src/components/FindInvError.css
+++ b/src/components/FindInvError.css
@@ -1,19 +1,25 @@
 .container {
-    padding: 90px 0;
-    max-width: 485px;
-    text-align: center;
-    margin: 0 auto;
+    width: 100%;
     font-size: 24px;
+    padding: 16px;
+}
+
+.message {
+    width: 75%;
+    display: inline-block;
+    margin-right: 16px;
+    vertical-align: middle;
 }
 
 .back {
-    width: 160px;
     height: 50px;
+    width: 100px;
     background-color: #6B061F;
     color: #fff;
-    border-radius: 5px;
     border: none;
-    margin-top: 88px;
     font-family: 'Poiret One', arial;
-    font-size: 24px;
+    font-size: 20px;
+    padding: 5px;
+    vertical-align: middle;
+    margin-top: 16px;
 }
