--- a/src/components/FindInvForm.css
+++ b/src/components/FindInvForm.css
@@ -1,53 +1,77 @@
 .container {
     width: 100%;
-    text-align: center;
-    max-width: 360px;
-    display: block;
+    display: inline-block;
     margin: 0 auto;
     display: block;
+    padding-bottom: 20px;
+}
+
+.container form {
+    width: 75%;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .intro {
+    display: inline-block;
     color: #163241;
     font-size: 24px;
-    margin-bottom: 16px;
+    width: 20%;
+    margin-right: 16px;
   }
 
 .input {
+    display: block;
     border: none;
     border-bottom: 3px solid #6B061F;
     height: 32px;
     font-size: 32px;
-    width: 100%;
-    margin-bottom: 16px;
-    margin-top: 8px;
     font-family: 'Poiret One', arial;
     background-color: transparent;
-    text-align: center;
+    width: 100%;
 }
 
 input:focus{
     outline: none;
 }
 
-form {
-    text-align: center;
+.label {
+    vertical-align: top;
+    font-size: 20px;
 }
 
-.label {
-    font-size: 20px;
-    color: #163241;
-    float: left;
+label {
+    display: inline-block;
+    width: 25%;
+    margin-right: 64px;
 }
 
 .submit {
-    width: 160px;
     height: 50px;
     background-color: #6B061F;
     color: #fff;
-    border-radius: 5px;
     border: none;
-    margin: 50px 0 90px 0;
     font-family: 'Poiret One', arial;
-    font-size: 24px;
+    font-size: 20px;
+    vertical-align: bottom;
 }
+
+.submit:hover {
+    cursor: pointer;
+}
+
+@media (max-width: 700px) {
+    .intro {
+        width: 100%;
+    }
+    label {
+        width: 33%;
+    }
+  }
+
+  @media (max-width: 550px) {
+    label {
+        width: 100%;
+        padding-top: 8px;
+    }
+  }
