--- a/src/containers/Rsvp.css
+++ b/src/containers/Rsvp.css
@@ -4,16 +4,30 @@
     overflow: scroll;
     height: 100vh;
     width: 100%;
-    background: url('http://kelseyandpatrickwedding.com/images/ann_arbor_bw.jpg');
+    background: url('http://kelseyandpatrickwedding.com/images/proposal_bw.png');
     background-size: cover;
-    background-position: right top;
+    background-position: 30% 50%;
+  }
+
+  .findInvHeader {
+    color: #6B061F;
+    font-size: 48px;
+    padding: 20px 20px 0 20px;
+    margin: 0 0 8px 0;
+  }
+
+  .findInvHeader .info {
+    width: 20%;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
+    padding-bottom: 16px;
   }
 
   .header {
     color: #6B061F;
     font-size: 36px;
-    padding: 20px;
-    text-align: center;
+    padding: 20px 20px 0 20px;
   }
 
   .banner {
