--- a/src/containers/Rsvp.css
+++ b/src/containers/Rsvp.css
@@ -9,6 +9,13 @@
     background-position: 30% 50%;
   }
 
+  .info {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
+    padding-bottom: 16px;
+  }
+
   .findInvHeader {
     color: #6B061F;
     font-size: 48px;
@@ -24,10 +31,17 @@
     padding-bottom: 16px;
   }
 
-  .header {
+  /* .header {
     color: #6B061F;
     font-size: 36px;
     padding: 20px 20px 0 20px;
+  } */
+
+  .header {
+    color: #6B061F;
+    font-size: 48px;
+    padding: 20px 20px 0 20px;
+    margin: 16px 0;
   }
 
   .banner {
