--- a/src/components/SelectRsvp.css
+++ b/src/components/SelectRsvp.css
@@ -1,14 +1,22 @@
+.container {
+    width: 100%;
+    font-size: 24px;
+    padding: 16px;
+}
+
 .message {
     width: 75%;
     display: inline-block;
     margin-right: 16px;
     vertical-align: middle;
-    font-size: 24px;
-    padding: 16px;
 }
 
 .message label {
     width: 100%;
+}
+
+.message label input {
+    margin-right: 16px;
 }
 
 .back {
@@ -22,5 +30,24 @@
     padding: 5px;
     vertical-align: middle;
     margin-top: 16px;
+}
+
+.submit {
+    height: 50px;
+    width: 150px;
+    background-color: #6B061F;
+    color: #fff;
+    border: none;
+    font-family: 'Poiret One', arial;
+    font-size: 20px;
+    vertical-align: bottom;
+    margin-top: 16px;   
+}
+
+.submit:hover {
+    cursor: pointer;
+}
+
+.checkboxes {
     margin-bottom: 16px;
 }
