--- a/src/containers/Location.css
+++ b/src/containers/Location.css
@@ -14,7 +14,7 @@
 }
 
 .infoCard {
-  width: 33%;
+  width: calc(50% - 10px);
   min-width: 250px;
   padding: 0;
   margin: 0;
@@ -22,6 +22,11 @@
   margin-right: 20px;
   vertical-align: top;
 }
+
+.infoCard:nth-child(2) {
+  margin-right: 0px;
+}
+
 
 .cardContent {
   min-height: 280px;
@@ -66,5 +71,12 @@
 @media (max-width: 570px) {
   .infoCard {
     width: 100%;
+    text-align: center;
+  }
+  .info2 {
+    padding-left: 0;
+  }
+  .header {
+    text-align: center;
   }
 }
