--- a/src/components/FindInvForm.css
+++ b/src/components/FindInvForm.css
@@ -18,6 +18,8 @@
     font-size: 24px;
     width: 20%;
     margin-right: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
   }
 
 .input {
@@ -26,7 +28,8 @@
     border-bottom: 3px solid #6B061F;
     height: 32px;
     font-size: 32px;
-    font-family: 'Poiret One', arial;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     background-color: transparent;
     width: 100%;
 }
