--- a/src/containers/Location.css
+++ b/src/containers/Location.css
@@ -42,6 +42,7 @@
   font-size: 48px;
   padding: 20px 20px 0 20px;
   margin: 16px 0;
+  font-family: 'Poiret One', arial;
 }
 
 .subheader {
@@ -49,6 +50,8 @@
   font-size: 36px;
   padding: 20px 20px 0 20px;
   margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: 'Poiret One', arial;
 }
 
 .info {
@@ -56,6 +59,8 @@
   padding-right: 20px;
   font-size: 20px;
   padding-bottom: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
 .info a {
@@ -66,6 +71,7 @@
   padding-left: 20px;
   color: #6B061F;
   font-size: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 @media (max-width: 570px) {
