--- a/src/containers/Rsvp.css
+++ b/src/containers/Rsvp.css
@@ -42,6 +42,7 @@
     font-size: 48px;
     padding: 20px 20px 0 20px;
     margin: 16px 0;
+    font-family: 'Poiret One', arial;
   }
 
   .banner {
