--- a/src/reset.css
+++ b/src/reset.css
@@ -3,5 +3,6 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Poiret One', arial;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
