--- a/src/containers/Location.css
+++ b/src/containers/Location.css
@@ -47,6 +47,10 @@
   min-height: 350px;
 }
 
+.row2 .infoCard {
+  width: 100%;
+}
+
 .header {
   color: #6B061F;
   font-size: 48px;
@@ -88,7 +92,7 @@
 }
 
 .detail {
-  font-size: 14px;
+  font-size: 18px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 8px;
@@ -104,5 +108,9 @@
   }
   .header {
     text-align: center;
+  }
+
+  .detail {
+    font-size: 18px;
   }
 }
