--- a/src/containers/Rsvp.css
+++ b/src/containers/Rsvp.css
@@ -16,6 +16,15 @@
     padding-bottom: 16px;
   }
 
+  .intro {
+    display: inline-block;
+    color: #163241;
+    font-size: 16px;
+    font-style: italic;
+    margin-left: 20px;
+    font-family: 'Roboto', sans-serif;
+  }
+
   .findInvHeader {
     color: #6B061F;
     font-size: 48px;
